[gd_scene load_steps=9 format=3 uid="uid://ch4ecmb0t6je5"]

[ext_resource type="Script" uid="uid://c3pc64o1gy2tk" path="res://NodeChat/welcome/script/file_system.gd" id="1_4n2lk"]
[ext_resource type="Script" uid="uid://l3lrxr867tl5" path="res://tool/DrawerContainer.gd" id="2_m6bvl"]
[ext_resource type="Texture2D" uid="uid://rtb1pouvx2sy" path="res://icon/refresh-fill.png" id="2_o1emc"]
[ext_resource type="PackedScene" uid="uid://u2mfnyksrwsl" path="res://NodeChat/welcome/tscn/texture_button.tscn" id="3_m6bvl"]
[ext_resource type="Texture2D" uid="uid://b3eewoxfe8k1j" path="res://icon/file-download-fill.png" id="3_mlycd"]
[ext_resource type="PackedScene" uid="uid://ckou0hsw0h5mx" path="res://NodeChat/welcome/tscn/nodeset_market.tscn" id="4_btwxi"]
[ext_resource type="Texture2D" uid="uid://b6gxeym2mluut" path="res://icon/file-add-fill.png" id="4_i5gp2"]
[ext_resource type="Texture2D" uid="uid://dus3qba4p254t" path="res://icon/file-cloud-fill.png" id="5_ksrud"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4n2lk")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="refresh_file" type="Button" parent="VBox/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
icon = ExtResource("2_o1emc")
expand_icon = true

[node name="load_file" type="Button" parent="VBox/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
icon = ExtResource("3_mlycd")
expand_icon = true

[node name="add_file" type="Button" parent="VBox/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
icon = ExtResource("4_i5gp2")
expand_icon = true

[node name="cloud_run" type="Button" parent="VBox/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
icon = ExtResource("5_ksrud")
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="add_pos" type="VBoxContainer" parent="VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DrawerContainer" type="Container" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_m6bvl")
custom_button_size = Vector2(80, 0)
button_tscn = ExtResource("3_m6bvl")
button_model = 2
animation_model = 8
is_open = false

[node name="NodesetMarket" parent="DrawerContainer" instance=ExtResource("4_btwxi")]
layout_mode = 2

[connection signal="pressed" from="VBox/HBoxContainer/refresh_file" to="." method="_on_refresh_file_pressed"]
[connection signal="pressed" from="VBox/HBoxContainer/load_file" to="." method="_on_load_file_pressed"]
[connection signal="pressed" from="VBox/HBoxContainer/add_file" to="." method="_on_add_file_pressed"]
[connection signal="pressed" from="VBox/HBoxContainer/cloud_run" to="." method="_on_cloud_run_pressed"]
